feature - CSS styles

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio: Ignacio Martín Fernández</title>
     <link rel="stylesheet" href="public/css/main.css">
+    <link rel="stylesheet" href="public/css/mobile.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons">
 
 </head>
@@ -58,7 +59,8 @@
                     <p>Mi nombre es Ignacio Martín Fernández, tengo 21 años y soy desarrollador web Front-End y
                         desarrollador de videojuegos independiente. Soy autodidacta y me emociona mucho aprender nuevas
                         tecnologias y desarrollar mis habilidades para mejorar.</p>
-                    </div>
+                </div>
+
 
             </article>
 
@@ -76,6 +78,8 @@
 
                 <img src="public/img/icons/html5-logo-240.png" alt="HTML 5">
 
+                <div></div>
+
             </article>
 
             <article class="main__card">
@@ -83,6 +87,8 @@
                 <h3>CSS 3</h3>
 
                 <img src="public/img/icons/css3-logo-240.png" alt="CSS 3">
+
+                <div></div>
 
             </article>
 
@@ -92,6 +98,8 @@
 
                 <img src="public/img/icons/git-logo-240.png" alt="Git">
 
+                <div></div>
+
             </article>
 
             <article class="main__card">
@@ -99,6 +107,8 @@
                 <h3>Unity</h3>
 
                 <img src="public/img/icons/unity-logo-240.png" alt="Unity">
+
+                <div></div>
 
             </article>
 
@@ -108,6 +118,8 @@
 
                 <img src="public/img/icons/python-logo-240.png" alt="Python">
 
+                <div></div>
+
             </article>
 
             <article class="main__card">
@@ -115,6 +127,8 @@
                 <h3>Django</h3>
 
                 <img src="public/img/icons/django-logo-240.png" alt="Django">
+
+                <div></div>
 
             </article>
 
@@ -124,6 +138,8 @@
 
                 <img src="public/img/icons/godot_engine_logo_icon_145240.png" alt="Godot">
 
+                <div></div>
+
             </article>
 
             <article class="main__card">
@@ -131,6 +147,8 @@
                 <h3>Figma</h3>
 
                 <img src="public/img/icons/figma-logo-240.png" alt="Figma">
+
+                <div></div>
 
             </article>
 
@@ -148,6 +166,8 @@
 
                 <img src="public/img/icons/flutter-logo-240.png" alt="Flutter">
 
+                <div></div>
+
             </article>
 
             <article class="main__card">
@@ -155,6 +175,8 @@
                 <h3>ReactJS</h3>
 
                 <img src="public/img/icons/react-logo-240.png" alt="ReactJS">
+
+                <div></div>
 
             </article>
 
@@ -164,6 +186,8 @@
 
                 <img src="public/img/icons/javascript-logo-240.png" alt="JavaScript">
 
+                <div></div>
+
             </article>
 
             <article class="main__card">
@@ -171,6 +195,8 @@
                 <h3>Unreal</h3>
 
                 <img src="public/img/icons/unreal_engine_logo_icon_144771.png" alt="Unreal">
+
+                <div></div>
 
             </article>
 
@@ -184,70 +210,76 @@
 
             <h3 class="main__project_type">Videojuegos</h3>
 
-            <article class="main__project_item">
+            <div>
+                <article class="main__project_item">
 
-                <img src="public/img/projects/catchemall.png" alt="Catch Em All">
+                    <img src="public/img/projects/catchemall.png" alt="Catch Em All">
 
-                <h4>Catch Em All</h4>
+                    <h4>Catch Em All</h4>
 
-                <span>Godot Engine, GDScript</span>
+                    <span>Godot Engine, GDScript</span>
 
-            </article>
+                </article>
 
-            <article class="main__project_item">
+                <article class="main__project_item">
 
-                <img src="public/img/projects/dummynoid.png" alt="Dummynoid">
+                    <img src="public/img/projects/dummynoid.png" alt="Dummynoid">
 
-                <h4>Dummynoid</h4>
+                    <h4>Dummynoid</h4>
 
-                <span>Godot Engine, GDScript</span>
+                    <span>Godot Engine, GDScript</span>
 
-            </article>
+                </article>
 
-            <article class="main__project_item">
+                <article class="main__project_item">
 
-                <img src="public/img/projects/endlessking.png" alt="Endless King">
+                    <img src="public/img/projects/endlessking.png" alt="Endless King">
 
-                <h4>Endless King</h4>
+                    <h4>Endless King</h4>
 
-                <span>Unity Engine, C#</span>
+                    <span>Unity Engine, C#</span>
 
-
-            </article>
+                </article>
+            </div>
 
             <h3 class="main__project_type">Web</h3>
 
-            <article class="main__project_item">
+            <div>
+                <article class="main__project_item">
 
-                <img src="public/img/projects/technews.png" alt="Technews">
+                    <img src="public/img/projects/technews.png" alt="Technews">
 
-                <h4>Technews</h4>
+                    <h4>Technews</h4>
 
-                <span>HTML 5, CSS 3, JS</span>
+                    <span>HTML 5, CSS 3, JS</span>
 
-            </article>
+                </article>
+            </div>
 
             <h3 class="main__project_type">Otros</h3>
 
-            <article class="main__project_item">
+            <div>
+                <article class="main__project_item">
 
-                <img src="public/img/projects/randomwordgenerator.png" alt="Random Words App">
+                    <img src="public/img/projects/randomwordgenerator.png" alt="Random Words App">
 
-                <h4>Random Words App</h4>
+                    <h4>Random Words App</h4>
 
-                <span>Flutter, Dart</span>
+                    <span>Flutter, Dart</span>
 
-            </article>
+                </article>
 
-            <article class="main__project_item">
 
-                <img src="public/img/projects/djangobot.png" alt="DJANGO bot">
+                <article class="main__project_item">
 
-                <h4>DJANGO Bot de Discord</h4>
+                    <img src="public/img/projects/djangobot.png" alt="DJANGO bot">
 
-                <span>Godot Engine, GDScript</span>
+                    <h4>DJANGO Bot de Discord</h4>
 
-            </article>
+                    <span>Godot Engine, GDScript</span>
+
+                </article>
+            </div>
 
         </section>
 
@@ -308,7 +340,7 @@
         </article>
 
     </footer>
-<script src="public/js/main.js"></script>
+    <script src="public/js/main.js"></script>
 </body>
 
 </html>
