feature - Projects description

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         </div>
                         <div class="project__face project__card--back">
                             <h5>Catch em All</h5>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, quis dolor, soluta recusandae rem culpa minima enim accusantium eius quam sunt pariatur repudiandae, cumque nemo beatae architecto ipsa distinctio fugiat.</p>
+                            <p>Catch em All es un minijuego que consiste en un zorro que atrapa gemas. Dichas gemas aumentan nuestra puntuacion y si las atrapamos todas aumentará nuestro límite de tiempo. Este videojuego fue mi forma de iniciarme en el desarrollo de videojuegos por mi cuenta. Utilizandolo para mejorar mi comprension de conceptos basicos y generales de creación de videojuegos.</p>
                         </div>
                     </div>
                 </article>
@@ -245,7 +245,8 @@
 
                         </div>
                         <div class="project__face project__card--back">
-                            <h5>Hola Mundo</h5>
+                            <h5>Dummynoid</h5>
+                            <p>Dummynoid es un videojuego estilo Arcanoid, en el que se debe lanzar una pelota para acertar a todos los objetivos. Una vez que todos los objetivos sean destruidos, se supera el nivel y se avanza al siguiente. Este proyecto lo utilice para poder acomodarme a conceptos un poco mas avanzados como efectos de particulas, instancias, tanto de objetos como de escenas y el concepto de herencia en Godot Engine.</p>
                         </div>
                     </div>
                 </article>
@@ -260,7 +261,8 @@
 
                         </div>
                         <div class="project__face project__card--back">
-                            <h5>Hola Mundo</h5>
+                            <h5>Endless King</h5>
+                            <p>Endless King es un Endless Runner que consiste en esquivar obstaculos para aumentar nuestra puntuación. Este videojuego lo utilice como mi entrada en el entorno de Unity, ya que, al ser Godot Engine mi motor de videojuegos en el que mas habilidad y conocimiento reconozco tener, decidí expandir dichos conocimientos probando otros motores como Unity, aprendiendo las bases de este y sus conceptos fundamentales y tambien gran parte de mi conocimiento en C#.</p>
                         </div>
                     </div>
                 </article>
@@ -278,7 +280,8 @@
 
                         </div>
                         <div class="project__face project__card--back">
-                            <h5>Hola Mundo</h5>
+                            <h5>Technews</h5>
+                            <p>Esta es una página web que desarrolle como mi primer acercamiento al mundo del desarrollo web, y sobre todo al desarrollo responsive, utilizando esta como mi punto de partida para desear aprender nuevas tecnologías como ReactJS, React Native, Flutter con Dart, incluso comenzar a estudiar un stack como el MERN.</p>
                         </div>
                     </div>
                 </article>
@@ -297,7 +300,8 @@
 
                         </div>
                         <div class="project__face project__card--back">
-                            <h5>Hola Mundo</h5>
+                            <h5>Random Words App</h5>
+                            <p>Esta aplicacion simplemente es un generador de pares de palabras, la cuales pueden guardarse en favoritos y verse listadas en dicha pestaña. Esta aplicacion fue mi punto de entrada hacia el desarrollo de aplicaciones móviles multiplataforma, despertando en mi un gran interes por este tipo de desarrollo y muchas ganas de aprender, tanto Flutter y React Native como tecnología multiplataforma, como Kotlin y Swift como tecnologías nativas.</p>
                         </div>
                     </div>
                 </article>
@@ -313,7 +317,8 @@
 
                         </div>
                         <div class="project__face project__card--back">
-                            <h5>Hola Mundo</h5>
+                            <h5>DJANGO</h5>
+                            <p>DJANGO es un bot de discord que desarrollé luego de 1 año desarrollando videojuegos con Godot. Fue desarrollado como una herramienta personal para facilitar, a mis amigos y a mi, jugar nuestras campañas de Dungeons & Dragons.</p>
                         </div>
                     </div>
                 </article>
@@ -343,7 +348,7 @@
 
         <article class="main__social_icon">
 
-            <a href="">
+            <a href="https://www.linkedin.com/in/ignacio-fernandez-285954231/" target="_blank">
 
                 <img src="public/img/icons/linkedin-square-logo-240.png" alt="linkedin">
 
@@ -367,7 +372,7 @@
 
         <article class="main__social_icon">
 
-            <a href="">
+            <a href="https://mail.google.com/mail" target="_blank">
 
                 <img src="public/img/icons/gmail-logo-240.png" alt="gmail">
 
