styles - responsive design

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio: Ignacio Martín Fernández</title>
     <link rel="stylesheet" href="public/css/main.css">
-    <link rel="stylesheet" href="public/css/mobile.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons">
     <script defer src="public/js/main.js"></script>
 
@@ -281,7 +280,7 @@
                         </div>
                         <div class="project__face project__card--back">
                             <h5>Technews</h5>
-                            <p>Esta es una página web que desarrolle como mi primer acercamiento al mundo del desarrollo web, y sobre todo al desarrollo responsive, utilizando esta como mi punto de partida para desear aprender nuevas tecnologías como ReactJS, React Native, Flutter con Dart, incluso comenzar a estudiar un stack como el MERN.</p>
+                            <p>Esta es una página web que desarrolle como mi primer acercamiento al mundo del desarrollo web, y sobre todo al desarrollo responsive, utilizando esta como mi punto de partida para interesarme en aprender nuevas tecnologías como ReactJS, React Native, Flutter con Dart, incluso comenzar a estudiar el stack MERN para convertirme en Desarrollador FullStack.</p>
                         </div>
                     </div>
                 </article>
@@ -318,7 +317,7 @@
                         </div>
                         <div class="project__face project__card--back">
                             <h5>DJANGO</h5>
-                            <p>DJANGO es un bot de discord que desarrollé luego de 1 año desarrollando videojuegos con Godot. Fue desarrollado como una herramienta personal para facilitar, a mis amigos y a mi, jugar nuestras campañas de Dungeons & Dragons.</p>
+                            <p>DJANGO es un bot de discord que desarrollé luego de 1 año desarrollando videojuegos con Godot. Fue desarrollado como una herramienta personal para facilitar, a mis amigos y a mi, jugar nuestras campañas de Dungeons & Dragons. DJANGO funciona como un manual virtual de Dungeons & Dragons, con distintos apartados dependiendo de la información requerida, pudiendo acceder a cada apartado utilizando su linea de comandos.</p>
                         </div>
                     </div>
                 </article>
