fixed responsive design

--- a/index.html
+++ b/index.html
@@ -82,8 +82,6 @@
 
                 <img src="public/img/icons/html5-logo-240.png" alt="HTML 5">
 
-                <div></div>
-
             </article>
 
             <article class="main__card">
@@ -91,8 +89,6 @@
                 <h3>CSS 3</h3>
 
                 <img src="public/img/icons/css3-logo-240.png" alt="CSS 3">
-
-                <div></div>
 
             </article>
 
@@ -102,8 +98,6 @@
 
                 <img src="public/img/icons/git-logo-240.png" alt="Git">
 
-                <div></div>
-
             </article>
 
             <article class="main__card">
@@ -111,8 +105,6 @@
                 <h3>Unity</h3>
 
                 <img src="public/img/icons/unity-logo-240.png" alt="Unity">
-
-                <div></div>
 
             </article>
 
@@ -122,8 +114,6 @@
 
                 <img src="public/img/icons/python-logo-240.png" alt="Python">
 
-                <div></div>
-
             </article>
 
             <article class="main__card">
@@ -131,8 +121,6 @@
                 <h3>Django</h3>
 
                 <img src="public/img/icons/django-logo-240.png" alt="Django">
-
-                <div></div>
 
             </article>
 
@@ -142,8 +130,6 @@
 
                 <img src="public/img/icons/godot_engine_logo_icon_145240.png" alt="Godot">
 
-                <div></div>
-
             </article>
 
             <article class="main__card">
@@ -151,8 +137,6 @@
                 <h3>Figma</h3>
 
                 <img src="public/img/icons/figma-logo-240.png" alt="Figma">
-
-                <div></div>
 
             </article>
 
@@ -170,8 +154,6 @@
 
                 <img src="public/img/icons/flutter-logo-240.png" alt="Flutter">
 
-                <div></div>
-
             </article>
 
             <article class="main__card">
@@ -179,8 +161,6 @@
                 <h3>ReactJS</h3>
 
                 <img src="public/img/icons/react-logo-240.png" alt="ReactJS">
-
-                <div></div>
 
             </article>
 
@@ -190,8 +170,6 @@
 
                 <img src="public/img/icons/javascript-logo-240.png" alt="JavaScript">
 
-                <div></div>
-
             </article>
 
             <article class="main__card">
@@ -199,8 +177,6 @@
                 <h3>Unreal</h3>
 
                 <img src="public/img/icons/unreal_engine_logo_icon_144771.png" alt="Unreal">
-
-                <div></div>
 
             </article>
 
@@ -335,7 +311,7 @@
 
         <article class="main__social_icon">
 
-            <a href="https://github.com/Chonp1543" target="_blank">
+            <a href="https://github.com/IgnacioFernandez1311" target="_blank">
 
                 <img src="public/img/icons/github-logo-240.png" alt="github">
 
@@ -371,13 +347,13 @@
 
         <article class="main__social_icon">
 
-            <a href="https://mail.google.com/mail" target="_blank">
+            <a href="https://www.facebook.com/profile.php?id=100062966547007" target="_blank">
 
-                <img src="public/img/icons/gmail-logo-240.png" alt="gmail">
+                <img src="public/img/icons/facebook-square-logo-240.png" alt="facebook">
 
             </a>
 
-            <span>Gmail</span>
+            <span>Facebook</span>
 
         </article>
 
