The Last One...

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     <h3>Ignacio Martín Fernández</h3>
 
                     <p>Mi nombre es Ignacio Martín Fernández, tengo 21 años y soy desarrollador web Front-End y
-                        desarrollador de videojuegos independiente. Soy autodidacta y me emociona mucho aprender nuevas
-                        tecnologias y desarrollar mis habilidades para mejorar.</p>
+                        desarrollador de videojuegos independiente con mas de dos años de experiencia. Soy autodidacta y me emociona mucho aprender nuevas
+                        tecnologias y desarrollar mis habilidades como desarrollador para mejorar.</p>
                 </div>
 
 
