Agregados nuevos proyectos web.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Portfolio: Ignacio Martín Fernández</title>
     <link rel="stylesheet" href="public/css/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <script defer src="public/js/main.js"></script>
 
 </head>
@@ -110,17 +111,9 @@
 
             <article class="main__card">
 
-                <h3>Python</h3>
+                <h3>JavaScript</h3>
 
-                <img src="public/img/icons/python-logo-240.png" alt="Python">
-
-            </article>
-
-            <article class="main__card">
-
-                <h3>Django</h3>
-
-                <img src="public/img/icons/django-logo-240.png" alt="Django">
+                <img src="public/img/icons/javascript-logo-240.png" alt="JavaScript">
 
             </article>
 
@@ -166,9 +159,17 @@
 
             <article class="main__card">
 
-                <h3>JavaScript</h3>
+                <h3>Python</h3>
 
-                <img src="public/img/icons/javascript-logo-240.png" alt="JavaScript">
+                <img src="public/img/icons/python-logo-240.png" alt="Python">
+
+            </article>
+
+            <article class="main__card">
+
+                <h3>Django</h3>
+
+                <img src="public/img/icons/django-logo-240.png" alt="Django">
 
             </article>
 
@@ -177,6 +178,14 @@
                 <h3>Unreal</h3>
 
                 <img src="public/img/icons/unreal_engine_logo_icon_144771.png" alt="Unreal">
+
+            </article>
+
+            <article class="main__card">
+
+                <h3>Vite.js</h3>
+
+                <img src="public/img/icons/vitejs.png" alt="Vite.js">
 
             </article>
 
@@ -203,7 +212,7 @@
                         </div>
                         <div class="project__face project__card--back">
                             <h5>Catch em All</h5>
-                            <p>Catch em All es un minijuego que consiste en un zorro que atrapa gemas. Dichas gemas aumentan nuestra puntuacion y si las atrapamos todas aumentará nuestro límite de tiempo. Este videojuego fue mi forma de iniciarme en el desarrollo de videojuegos por mi cuenta. Utilizandolo para mejorar mi comprension de conceptos basicos y generales de creación de videojuegos.</p>
+                            <p>Catch em All es un minijuego que consiste en un zorro que atrapa gemas. Dichas gemas aumentan nuestra puntuación y si las atrapamos todas aumentará nuestro límite de tiempo. Este videojuego fue mi forma de iniciarme en el desarrollo de videojuegos por mi cuenta. Utilizandolo para mejorar mi comprension de conceptos básicos y generales de creación de videojuegos.</p>
                         </div>
                     </div>
                 </article>
@@ -221,7 +230,7 @@
                         </div>
                         <div class="project__face project__card--back">
                             <h5>Dummynoid</h5>
-                            <p>Dummynoid es un videojuego estilo Arcanoid, en el que se debe lanzar una pelota para acertar a todos los objetivos. Una vez que todos los objetivos sean destruidos, se supera el nivel y se avanza al siguiente. Este proyecto lo utilice para poder acomodarme a conceptos un poco mas avanzados como efectos de particulas, instancias, tanto de objetos como de escenas y el concepto de herencia en Godot Engine.</p>
+                            <p>Dummynoid es un videojuego estilo Arcanoid, en el que se debe lanzar una pelota para acertar a todos los objetivos. Una vez que todos los objetivos sean destruidos, se supera el nivel y se avanza al siguiente. Este proyecto lo utilicé para poder acomodarme a conceptos un poco mas avanzados como efectos de partículas, instancias, tanto de objetos como de escenas y el concepto de herencia en Godot Engine.</p>
                         </div>
                     </div>
                 </article>
@@ -237,7 +246,7 @@
                         </div>
                         <div class="project__face project__card--back">
                             <h5>Endless King</h5>
-                            <p>Endless King es un Endless Runner que consiste en esquivar obstaculos para aumentar nuestra puntuación. Este videojuego lo utilice como mi entrada en el entorno de Unity, ya que, al ser Godot Engine mi motor de videojuegos en el que mas habilidad y conocimiento reconozco tener, decidí expandir dichos conocimientos probando otros motores como Unity, aprendiendo las bases de este y sus conceptos fundamentales y tambien gran parte de mi conocimiento en C#.</p>
+                            <p>Endless King es un Endless Runner que consiste en esquivar obstaculos para aumentar nuestra puntuación. Este videojuego lo utilicé como mi entrada en el entorno de Unity, ya que, al ser Godot Engine el motor de videojuegos en el que mas habilidad y conocimiento reconozco tener, decidí expandir dichos conocimientos probando otros motores como Unity, aprendiendo las bases de este y sus conceptos fundamentales y tambien gran parte de mi conocimiento en C#.</p>
                         </div>
                     </div>
                 </article>
@@ -248,15 +257,92 @@
                 <article class="main__project_item">
                     <div class="project__card">
                         <div class="project__face project__card--front"></div>
-                            <img src="public/img/projects/technews.png" alt="Technews">
+                            <img src="public/img/projects/weather-app.png" alt="Weather App">
 
                             <span>HTML 5, CSS 3, JS</span>
-                            <h4>Technews</h4>
+                            <h4>App del Clima</h4>
 
                         </div>
                         <div class="project__face project__card--back">
-                            <h5>Technews</h5>
-                            <p>Esta es una página web que desarrolle como mi primer acercamiento al mundo del desarrollo web, y sobre todo al desarrollo responsive, utilizando esta como mi punto de partida para interesarme en aprender nuevas tecnologías como ReactJS, React Native, Flutter con Dart, incluso comenzar a estudiar el stack MERN para convertirme en Desarrollador FullStack.</p>
+                            <h5>App del Clima</h5>
+                            <p>Una simple aplicación que le muestra al usuario la temperatura máxima y mínima, la fecha, la temperatura actual y la condición meteorológica de la ciudad que el usuario busque. Esta aplicación fue mi primera interacción con una API y con ella aprendí a realizar un fetching de datos en JavaScript Vanilla.</p>
+                            <a  href="https://weather-app-if.netlify.app" target="_blank">Ver enlace<i class="material-icons">open_in_new</i></a>
+                        </div>
+                    </div>
+                </article>
+            </div>
+
+            <div>
+                <article class="main__project_item">
+                    <div class="project__card">
+                        <div class="project__face project__card--front"></div>
+                            <img src="public/img/projects/calculator-app.png" alt="Calculator App">
+
+                            <span>HTML 5, CSS 3, JS</span>
+                            <h4>Calculadora</h4>
+
+                        </div>
+                        <div class="project__face project__card--back">
+                            <h5>Calculadora</h5>
+                            <p>Una calculadora creada con el fin de mejorar y reforzar conocimientos de Programación Orientada a Objetos con el manejo de Clases, Instancias y Métodos para crear las diferentes caracterísiticas y funciones de una calculadora completamente funcional.</p>
+                            <a href="https://calculator-app-if.netlify.app" target="_blank">Ver enlace<i class="material-icons">open_in_new</i></a>
+                        </div>
+                    </div>
+                </article>
+            </div>
+
+            <div>
+                <article class="main__project_item">
+                    <div class="project__card">
+                        <div class="project__face project__card--front"></div>
+                            <img src="public/img/projects/todo-app.png" alt="Todo App">
+
+                            <span>HTML 5, CSS 3, JS</span>
+                            <h4>App de Tareas</h4>
+
+                        </div>
+                        <div class="project__face project__card--back">
+                            <h5>App de Tareas</h5>
+                            <p>Esta aplicación de lista de tareas es un CRUD que utilicé como forma de aprender y practicar el concepto de localStorage y la persistencia de datos a lo largo de las sesiones del usuario en JavaScript Vanilla.</p>
+                            <a href="https://todo-app-if.netlify.app" target="_blank">Ver enlace<i class="material-icons">open_in_new</i></a>
+                        </div>
+                    </div>
+                </article>
+            </div>
+
+            <div>
+                <article class="main__project_item">
+                    <div class="project__card">
+                        <div class="project__face project__card--front"></div>
+                            <img src="public/img/projects/memo-app.png" alt="Memo Test App">
+
+                            <span>ReactJS, Vite.js</span>
+                            <h4>Memo Test App</h4>
+
+                        </div>
+                        <div class="project__face project__card--back">
+                            <h5>Memo Test App</h5>
+                            <p>Un pequeño juego de test de memoria desarrollado en ReactJS con JSX y Vite como empaquetador, para aprender la implementación de conceptos básicos de efectos con useEffect() y reforzar conocimientos en el manejo de estados con useState().</p>
+                            <a href="https://memo-app-if.netlify.app" target="_blank">Ver enlace<i class="material-icons">open_in_new</i></a>
+                        </div>
+                    </div>
+                </article>
+            </div>
+
+            <div>
+                <article class="main__project_item">
+                    <div class="project__card">
+                        <div class="project__face project__card--front"></div>
+                            <img src="public/img/projects/tictactoe-app.png" alt="Tic Tac Toe App">
+
+                            <span>ReactJS, Vite.js</span>
+                            <h4>Tres en Raya App</h4>
+
+                        </div>
+                        <div class="project__face project__card--back">
+                            <h5>Tres en Raya App</h5>
+                            <p>Juego de tres en raya que desarrollé para aprender sobre el manejo de estados en ReactJS además de otros conceptos básicos de React, y también la utilicé para reforzar mis conocimientos en animaciones con CSS3.</p>
+                            <a href="https://tictactoe-app-if.netlify.app" target="_blank">Ver enlace<i class="material-icons">open_in_new</i></a>
                         </div>
                     </div>
                 </article>
