Solucionado el problema de el proyecto tic tac toe

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                         <div class="project__face project__card--back">
                             <h5>Tres en Raya App</h5>
                             <p>Juego de tres en raya que desarrollé para aprender sobre el manejo de estados en ReactJS además de otros conceptos básicos de React, y también la utilicé para reforzar mis conocimientos en animaciones con CSS3.</p>
-                            <a href="https://tictactoe-if.netlify.app" target="_blank">Ver enlace<i class="material-icons">open_in_new</i></a>
+                            <a href="https://tictactoe-app-if.netlify.app" target="_blank">Ver enlace<i class="material-icons">open_in_new</i></a>
                         </div>
                     </div>
                 </article>
